--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android_basic"
+<manifest package="com.example.android_basic"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name="MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +23,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+		<activity
+            android:name="NewsActivity"
+            android:label="News">
+		</activity>
+		<activity android:name="BrowseNewsActivity" android:label="News info"></activity>
+		<activity android:name="LoginActivity" android:label="Longin Page"></activity>
     </application>
 
 </manifest>
